Compiler/fasto/tests/scan_neg4.err
Type error: Scan: incompatible function type of and: bool * int -> bool at line 4, column 11