Compiler/fasto/tests/scan_neg4.fo
fun bool and (bool a, int b) = a && true

fun int main () = 
  let a = scan (and, true, {false, true, false}) in 0